# consoler

./: README.md  consoler.py  example.py  pyproject.toml  requirements.txt
pyconsoler/: __init__.py  cli.py  const.py  helpers.py  output.py
tests/: test_get_time_stamp.py  test_output.py
