[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyconsoler"
author = "Sander Teunissen"
author-email = "no_mail@nomail.com"
home-page = "https://github.com/sander76/pyconsoler"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["colorama"]
requires-python=">=3.6"

